@@ -3301,6 +3301,29 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+name|assertTrue
+argument_list|(
+name|con
+operator|.
+name|isReadOnly
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|con
+operator|.
+name|setReadOnly
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|con
+operator|.
+name|isReadOnly
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertNull
 argument_list|(
 name|con
@@ -3361,6 +3384,33 @@ argument_list|(
 name|statement
 operator|.
 name|getWarnings
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|statement
+operator|.
+name|getFetchSize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|statement
+operator|.
+name|setFetchSize
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|statement
+operator|.
+name|getFetchSize
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -3833,6 +3883,18 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+name|assertEquals
+argument_list|(
+name|ResultSet
+operator|.
+name|TYPE_FORWARD_ONLY
+argument_list|,
+name|rs
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertNull
 argument_list|(
 name|rs
